image overlap fixed

--- a/public/styles/myProjects.css
+++ b/public/styles/myProjects.css
@@ -14,6 +14,7 @@ html, body {
     height: 381px;
     bottom: 50px;
     position: fixed;
+    z-index: -1;
     width: 100%;
     background-repeat: no-repeat;
     overflow: hidden;
